# Lorikeet

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CITATION.cff  Cargo.toml  INSTALL.md  README.md  build.sh  build_manuals.sh  comparisons.html  concepts.html  doctave.yaml  examples.html  faqs.html  index.html  install.sh  install_static.sh  installation.html  lorikeet.yml  prelude  release  release.sh  releaserc  roff_to_md.sh  search_index.json
.github/workflows/: deploy-docs.yaml  pre-release-lorikeet.yml  release-lorikeet.yml  rust.yml  test-lorikeet.yml
assets/: doctave-style.css
benches/: benchmarks.rs
docs/: 404.html  README.md  comparisons.md  concepts.md  config.toml  deploy.sh  examples.md  index.html  index.xml  installation.md  sitemap.xml
docs/categories/: index.html  index.xml
docs/content/: _index.md
docs/docs/: index.html  index.xml
docs/js/: scripts.min.1237ff71925bb8625c97a9af8db4c54525258bedfd7c47493daaff723bea755e.js
docs/public/: 404.html  index.html  index.xml  sitemap.xml
docs/tags/: index.html  index.xml
docs/usage/: README.md  evolve.md  genotyping.md  lorikeet-call.md  lorikeet-consensus.md  lorikeet-evolve.md  lorikeet-genotype.md  lorikeet-summarise.md  variant_calling.md
lorikeet_out/: test_genome.fna.error0.1.1.fq.bam  test_genome.fna.test2.1.fq.bam  test_genome.fna.test2.1.fq.bam.bai  two_contigs.fna.two_contigs_set1.1.fq.bam  two_contigs.fna.two_contigs_set1.1.fq.bam.bai  two_contigs.fna.two_contigs_set2.1.fq.bam  two_contigs.fna.two_contigs_set2.1.fq.bam.bai
releases/: remove_minimap2_duplicated_headers.d
rosella/: README.md  rosella.yml  setup.py
rosella/rosella/: binning.py  cluster.py  metrics.py  rosella.py
site/: comparisons.html  concepts.html  config.toml  deploy.sh  examples.html  index.html  installation.html  search_index.json
site/archetypes/: docs.md
site/assets/: doctave-style.css
site/content/: _index.md
site/usage/: genotyping.html  index.html  variant_calling.html
src/: bam_generator.rs  bwa_index_maintenance.rs  cli.rs  cli.rs~  clustering.rs  codon_structs.rs  contig.rs  coverage_printer.rs  coverage_takers.rs  distance.rs  external_command_checker.rs  filter.rs  genes_and_codons.rs  genome.rs  genomes_and_contigs.rs  gff_generator.rs  haplotypes_and_genotypes.rs  lib.rs  main.rs  mapping_index_maintenance.rs  mapping_parameters.rs  mash.rs  matrix_handling.rs  minhashes.rs  mosdepth_genome_coverage_estimators.rs  nmf.py  pileup_matrix.rs  pileup_structs.rs  pileups.rs  plotting_dendrogram.py  run_umap.py  shard_bam_reader.rs  snp_density_plots.R  umap.py  utils.rs  variants.rs
src/abundance/: abundance_calculator_engine.rs  mod.rs  strain_abundances_calculator.rs
src/activity_profile/: activity_profile.rs  activity_profile_state.rs  band_pass_activity_profile.rs  mod.rs
src/ani_calculator/: ani_calculator.rs  mod.rs
src/annotator/: mod.rs  tandem_repeat.rs  variant_annotation.rs  variant_annotator_engine.rs
src/assembly/: assembly_based_caller_utils.rs  assembly_region.rs  assembly_region_iterator.rs  assembly_region_trimmer.rs  assembly_region_walker.rs  assembly_result.rs  assembly_result_set.rs  kmer.rs  kmer_counter.rs  mod.rs  read_threading_assembler.rs
src/bam_parsing/: bam_generator.rs  filter.rs  mapping_index_maintenance.rs  mapping_parameters.rs  mod.rs
src/dbscan/: fuzzy.rs  mod.rs
src/estimation/: alignment_properties.rs  codon_structs.rs  contig.rs  contig_variants.rs  evolve.rs  genotype_abundances.rs  linkage.rs  lorikeet_engine.rs  mod.rs  variant_matrix.rs
src/evolve/: codon_structs.rs  mod.rs
src/factorization/: mod.rs  nmf.rs  nmf_std.rs  seeding.rs
src/genotype/: genotype_allele_counts.rs  genotype_builder.rs  genotype_likelihood_calculator.rs  genotype_likelihood_calculators.rs  genotype_likelihoods.rs  genotype_prior_calculator.rs  genotyping_engine.rs  genotyping_likelihoods.rs  mod.rs
src/graphs/: adaptive_chain_pruner.rs  base_edge.rs  base_graph.rs  base_vertex.rs  chain_pruner.rs  common_suffix_splitter.rs  graph_based_k_best_haplotype_finder.rs  graph_utils.rs  k_best_haplotype.rs  k_best_haplotype_finder.rs  kmer_searchable_graph.rs  low_weight_chain_pruner.rs  mod.rs  multi_sample_edge.rs  path.rs  seq_graph.rs  seq_vertex.rs  shared_sequence_merger.rs  shared_vertex_sequence_splitter.rs  vertex_based_transformer.rs
src/haplotype/: active_regions.rs  call.rs  called_haplotypes.rs  event_map.rs  haplotype.rs  haplotype_caller_engine.rs  haplotype_caller_genotyping_engine.rs  haplotype_clustering_engine.rs  homogenous_ploidy_model.rs  mod.rs  (+6 more)
tests/: activity_profile_unit_tests.rs  alignment_utils_unit_tests.rs  allele_frequency_calculator_unit_tests.rs  allele_likelihoods_unit_tests.rs  allele_list_unit_tests.rs  allele_subsetting_utils_unit_tests.rs  assembly_based_caller_utils_unit_tests.rs  assembly_region_unit_tests.rs  assembly_result_set_unit_tests.rs  bam_indexing_unit_tests.rs  band_pass_activity_profile_unit_tests.rs  chain_pruner_unit_tests.rs  cigar_builder_unit_tests.rs  cigar_utils_unit_tests.rs  common_suffix_merger_unit_tests.rs  common_suffix_splitter_unit_tests.rs  event_map_unit_tests.rs  genotype_allele_counts_unit_tests.rs  genotype_likelihood_calculator_unit_tests.rs  graph_based_k_best_haplotype_finder_unit_tests.rs  haplotype_caller_engine_unit_tests.rs  haplotype_unit_tests.rs  independent_samples_genotype_model_unit_tests.rs  math_utils_unit_tests.rs  multi_debruijn_vertex_unit_tests.rs  multi_sample_edge_unit_tests.rs  nearby_kmer_error_corrector_unit_tests.rs  pair_hmm_likelihood_calculation_engine_unit_tests.rs  pair_hmm_model_unit_tests.rs  pair_hmm_unit_tests.rs  path_unit_tests.rs  read_clipper_unit_tests.rs  read_threading_assembler_unit_tests.rs  read_threading_graph_unit_tests.rs  reference_writer_unit_tests.rs  seq_graph_unit_tests.rs  shared_vertex_sequence_splitter_unit_tests.rs  simple_interval_unit_tests.rs  smith_waterman_aligner_unit_tests.rs  variant_context_unit_test.rs  (+3 more)
usage/: index.html  lorikeet-call.html  lorikeet-consensus.html  lorikeet-genotype.html  lorikeet-summarise.html
(+219 files in other folders)
